Integrate yaz4j (#10)
Co-authored-by: David Crossley <david@indexdata.com>